fixed bug where reference images would get cramped up.

--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -167,21 +167,21 @@
 .ReferencesPane {
     display: flex;
     flex-direction: column;
-    justify-content:center;
-    width: 35%;
+    width: 45%;
     margin-bottom: 10%;
 }
 
 .ReferenceItem {
-    margin-top: 10%;
+    margin-bottom: 10%;
     display: flex;
     width: 100%;
     flex-direction: row;
+    justify-content: center;
 }
 
 .ReferenceItem div {
+    width: 70%;
     display: flex;
-    flex-grow: 1;
     flex-direction: column;
 }
 
